# KColor

./: .gitignore  README.md  main.py  pyproject.toml
src/kcolor/: main.py
